<resources>
    <string name="app_name">EngSpace</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_home">HOME</string>
    <string name="action_create">CREATE</string>
    <string name="action_profile">PROFILE</string>
    <string name="action_search">SEARCH</string>
    <string name="action_manage">MANAGE</string>
    <string name="fragment_home">Fragment home</string>
    <string name="fragment_search">Fragment search</string>
    <string name="fragment_create">Fragment create</string>
    <string name="fragment_profile">Fragment profile</string>
    <string name="fragment_manage">Fragment manage</string>
    <string name="administator">Administrator</string>
    <string name="my_bio_here">my bio here</string>
    <string name="profile_picture">profile picture</string>
    <string name="thu_muc">Thư mục</string>
    <string name="tao_va_chinh_sua_thu_muc">Tạo và chỉnh sửa thư mục</string>
    <string name="hoc_phan">Học phần</string>
    <string name="tao_va_chinh_sua_hoc_phan">Tạo và chỉnh sửa học phần</string>
    <string name="email">Email</string>
    <string name="admin_example_com">Admin@example.com</string>
    <string name="thong_tin_co_ban">Thông tin cơ bản</string>
    <string name="chinh_sua_thong_tin_co_ban">Chính sửa thông tin cơ bản</string>
    <string name="mat_khau">Mật khẩu</string>
    <string name="thay_doi_mat_khau">Thay đổi mật khẩu</string>
    <string name="gioi_thieu_ban_be">Giới thiệu bạn bè</string>
    <string name="tao_va_chia_se_hoc_phan_voi_ban_be">Tạo và chia sẻ học phần với bạn bè</string>
    <string name="xoa_tai_khoan">Xóa tài khoản</string>
    <string name="xoa_hoan_toan_tai_khoan">Xóa hoản toàn tài khoản khỏi nền tảng</string>
    <string name="dang_xuat">Đăng xuất</string>
    <string name="dang_xuat_tai_khoan_khoi_thiet_bi">Đăng xuất tài khoản khỏi thiết bị</string>
    <string name="arrow_">arrow</string>
    <string name="image_">Image</string>
    <string name="nothing_here">nothing here</string>
    <string name="status_actived">status: actived</string>
    <string name="ten_tai_khoan_administrator">Tên tài khoản: administrator</string>
    <string name="ho_va_ten_administrator">Họ và tên: Administrator</string>
    <string name="gioi_thieu">Giới thiệu</string>
    <string name="ngay_sinh_01_01_1994">Ngày sinh: 01/01/1994</string>
    <string name="email_admin_example_com">Email: admin@example.com</string>
    <string name="website_example_com">Website: example.com</string>
    <string name="facebook_url">www.fb.com/tqhit</string>
    <string name="mo_ta_ve_toi">Mô tả về tôi</string>
    <string name="lorem_ipsum_100">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam vel diam quis elit sodales fermentum eget ut ipsum. Nam at lorem vitae libero vestibulum commodo quis a dui. Morbi commodo nisi eu pharetra imperdiet. Suspendisse posuere, augue in volutpat porttitor, massa tortor hendrerit felis, ac tincidunt magna eros a nibh. Praesent convallis ultrices justo, nec efficitur sem auctor et. Vestibulum imperdiet eros id elit dictum pharetra. Etiam posuere semper erat sit amet dapibus. Fusce ac tempor libero, in interdum nulla. Fusce scelerisque rutrum felis in fermentum. Morbi egestas eget magna id venenatis. In ac justo nisl. Etiam et sem a.</string>
    <string name="xem_tat_ca">Xem tất cả</string>
    <string name="co_x_nguoi_dang_theo_doi_ban">Có 50 người đang theo dõi bạn</string>
    <string name="co_x_nguoi_ban_dang_theo_doi">Có 50 người bạn đang theo dõi</string>
    <string name="dang_theo_doi">Đang theo dõi</string>
    <string name="your_folower">your follower</string>
    <string name="folowing">Folowing</string>
    <string name="all_flowing">All flowing</string>
    <string name="all_folower">All folower</string>
    <string name="trang_chu">Trang chủ</string>
    <string name="q1">Learning</string>
    <string name="q2">Never Stop Learning.\nBecause life never stop Teaching.</string>
    <string name="kham_pha">Khám phá</string>
    <string name="hoc_phan_noi_bat">Nổi bật gần đây</string>
    <string name="chao_mung">Chào mừng đã đến!</string>
    <string name="term_filter_tat_ca">Tất cả</string>
    <string name="term_filter_below_20">Dưới 20 thuật ngữ</string>
    <string name="term_filter_form_20_to_49">20 đến 49 thuật ngữ</string>
    <string name="term_filter_above_50">Trên 50 thuật ngữ</string>
    <string name="number_of_terms">Số thuật ngữ</string>
    <string name="type">Loại</string>
    <string name="type_filter_folder">Thư mục</string>
    <string name="type_filter_set">Học phần</string>
    <string name="gioi_thieu_ve_toi">Giới thiệu về tôi</string>
    <string name="thong_tin_chi_tiet">Thông tin chi tiết</string>
    <string name="bat_dau_ngay">Bắt đầu ngay</string>
    <string name="toi_da_co_tai_khoan">Tôi đã có tài khoản</string>
    <string name="chao_mung_moi">Chào mừng!</string>
    <string name="dang_ky_thong_tin_nhe">Đăng ký thông tin nhé.</string>
    <string name="ho">Họ</string>
    <string name="ten">Tên</string>
    <string name="username_cua_ban">Username của bạn</string>
    <string name="email_cua_ban">Email của bạn</string>
    <string name="nhap_mat_khau">Nhập mật khẩu</string>
    <string name="xac_nhan_mat_khau">Xác nhận mật khẩu</string>
    <string name="dang_ky_ngay">Đăng ký ngay</string>
    <string name="input_password">input password</string>
    <string name="dang_nhap">Đăng nhập</string>
    <string name="quen_mat_khau">QUÊN MẬT KHẨU</string>
    <string name="dong_y_dieu_khoan_va_chinh_sach_bao_mat">Đồng ý với điều khoản và chính sách \n bảo mật của chúng tôi</string>
    <string name="ten_dang_nhap_hoac_email">Tên đăng nhập hoặc email</string>
    <string name="ten_dang_nhap">Tên đăng nhập</string>
    <string name="login_with_facebook">Login with facebook</string>
    <string name="nhap_dia_chi_email_de_nhan_duong_dan_dat_lai_mat_khau">Nhập địa chỉ email để nhận đường dẫn \n đặt lại mật khẩu</string>
    <string name="gui_email">Gửi email</string>
    <string name="nut_tro_ve">nút trở về</string>
    <string name="dat_lai_mat_khau">Đặt lại mật khẩu</string>
    <string name="ma_xac_nhan">Mã xác nhận</string>
    <string name="mat_khau_moi">Mật khẩu mới</string>
    <string name="xac_nhan_mat_khau_moi">Xác nhận mật khẩu mới</string>
    <string name="dang_nhap_thanh_cong">Đăng nhập thành công</string>
    <string name="chao_mung_den_voi_khong_gian_hoc_tap">Chào mừng bạn đến với không gian \n học tập của riêng bạn</string>
    <string name="tiep_tuc">Tiếp tục</string>
    <string name="xac_nhan">Xác nhận</string>
    <string name="chao_mung_home">Chào mừng !</string>
    <string name="khong_co_hoc_phan_nao">Không có học phần nào</string>
    <string name="khong_co_thu_muc_nao">Không có thư mục nào</string>
    <string name="khong_co_thuat_ngu_nao">Không có thuật ngữ nào</string>
    <string name="chu_de">Chủ đề</string>
    <string name="mo_ta_so_luoc_ve_thu_muc">Mô tả sơ lược về thư mục</string>
    <string name="mo_ta_so_luoc_ve_chu_de">Mô tả sơ lược về chủ đề</string>
    <string name="ten_chu_de">Tên chủ đề</string>
    <string name="ten_thu_muc">Tên thư mục</string>
    <string name="ho_so">Hồ sơ</string>
    <string name="sua_hoc_phan">Sửa học phần</string>
    <string name="tao_hoc_phan">Tạo học phần</string>
    <string name="them_vao_thu_muc">Thêm vào thư mục</string>
    <string name="quan_ly_hoc_phan">Quản lý học phần</string>
    <string name="them_hoc_phan">Thêm học phần</string>
    <string name="sua_thu_muc">Sửa thư mục</string>
    <string name="them_thu_muc">Thêm thư mục</string>
    <string name="quan_ly_thu_muc">Quản lý thư mục</string>
    <string name="hoc_phan_moi">Học phần mới</string>
    <string name="dieu_khoan_dieu_kien"><![CDATA[Điều khoản & điều kiện]]></string>
    <string name="privacy_policy_content">Built the Elearning app as a Commercial app. This SERVICE is provided by and is intended for use as is. \n\nThis page is used to inform visitors regarding our policies with the collection, use, and disclosure of Personal Information if anyone decided to use our Service. \n\nIf you choose to use our Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that we collect is used for providing and improving the Service. We will not use or share your information with anyone except as described in this Privacy Policy. \n\nThe terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at Find hotel unless otherwise defined in this Privacy Policy.</string>
    <string name="information_collection_and_use">For a better experience, while using our Service, we may require you to provide us with certain personally identifiable information. The information that we request will be retained by us and used as described in this privacy policy. \n\nThe app does use third party services that may collect information used to identify you. \n\nLink to privacy policy of third party service providers used by the app.</string>
    <string name="log_data">We want to inform you that whenever you use our Service, in a case of an error in the app we collect data and information (through third party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing our Service, the time and date of your use of the Service, and other statistics.</string>
    <string name="term_conditions_content">By downloading or using the app, these terms will automatically apply to you – you should make sure therefore that you read them carefully before using the app. You’re not allowed to copy, or modify the app, any part of the app, or our trademarks in any way. You’re not allowed to attempt to extract the source code of the app, and you also shouldn’t try to translate the app into other languages, or make derivative versions. The app itself, and all the trade marks, copyright, database rights and other intellectual property rights related to it. Still committed to ensuring that the app is as useful and efficient as possible. For that reason, we reserve the right to make changes to the app or to charge for its services, at any time and for any reason. We will never charge you for the app or its services without making it very clear to you exactly what you’re paying for. \n\nAt some point, we may wish to update the app. The app is currently available on Android &amp; iOS – the requirements for system (and for any additional systems we decide to extend the availability of the app to) may change, and you’ll need to download the updates if you want to keep using the app. does not promise that it will always update the app so that it is relevant to you and/or works with the iOS version that you have installed on your device. However, you promise to always accept updates to the application when offered to you, We may also wish to stop providing the app, and may terminate use of it at any time without giving notice of termination to you.</string>
    <string name="terms_conditions">Terms &amp; Conditions</string>
    <string name="changes_to_this_terms_and_conditions_content">We may update our Terms and Conditions from time to time. Thus, you are advised to review this page periodically for any changes. We will notify you of any changes by posting the new Terms and Conditions on this page. These changes are effective immediately after they are posted on this page.</string>
    <string name="contact_us_content">If you have any questions or suggestions about our Terms and Conditions, do not hesitate to contact us at 1952xxxx@gm.uit.edu.vn.</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="changes_to_this_terms_and_conditions">Changes to This Terms and Conditions</string>
    <string name="contact_us">Contact Us</string>
</resources>